Add an "attempts" endpoint to allow for batching
